# spacegame

./: .gitignore  CMakeLists.txt  README.md
data/: shader.vert
data/Shaders/: BlackHole.frag  Flame.frag
data/levels/: level1.json  level2.json  level3.json
dependencies/SFGUI-0.4.0/: CMakeLists.txt
include/: Background.hpp  BlackHole.hpp  Camera.hpp  Coords.hpp  Effect.hpp  Explosion.hpp  Flame.hpp  Game.hpp  GameInterface.hpp  GravityObject.hpp  Menu.hpp  Ship.hpp  SpaceObject.hpp  Sprite.hpp  Trajectory.hpp  Utils.hpp  Vector2f.hpp
src/: Background.cpp  Background.hpp  BlackHole.cpp  BlackHole.hpp  Camera.cpp  Coords.cpp  Effect.hpp  Explosion.cpp  Explosion.hpp  Flame.cpp  Flame.hpp  Game.cpp  GameInterface.cpp  GameInterface.hpp  GravityObject.cpp  GravityObject.hpp  Menu.cpp  Menu.hpp  Ship.cpp  Ship.hpp  SpaceObject.cpp  SpaceObject.hpp  Sprite.cpp  Sprite.hpp  Trajectory.cpp  Utils.cpp  Utils.hpp  Vector2f.cpp  Vector2f.hpp  main.cpp
vs/: vs.sln
vs/vs/: vs.vcxproj  vs.vcxproj.filters
